apps/elasticsearch-eck/overlays/dev/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-eck
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kibana.172.30.1.101.nip.io
    http:
      paths:
      - backend:
          service:
            name: dev-kibana-eck-kb-http
            port:
              number: 5601
        path: /
        pathType: Prefix
  - host: kibana.yahwang.cloud
    http:
      paths:
      - backend:
          service:
            name: dev-kibana-eck-kb-http
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kibana.yahwang.cloud
    secretName: kibana-letsencrypt-tls
